monitoring/base/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: homelab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "ca-issuer"
spec:
  rules:
    - host: grafana.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.home.lab
      secretName: grafana-tls
